[package]
name = "rs-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "http2", "stream"] }
dotenvy = "0.15"


